workspace/log/build_2024-12-07_16-49-01/template_drone_control/stderr.log
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In constructor ‘MultiDroneControl::MultiDroneControl()’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:90:14: warning: structured bindings only available with ‘-std=c++17’ or ‘-std=gnu++17’
   90 |         auto [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1);
      |              ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:102:14: warning: structured bindings only available with ‘-std=c++17’ or ‘-std=gnu++17’
  102 |         auto [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1);
      |              ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:102:15: error: conflicting declaration ‘auto coordsDrone2’
  102 |         auto [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1);
      |               ^~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:90:15: note: previous declaration as ‘std::tuple_element<0, std::pair<MultiDroneControl::Coords, MultiDroneControl::Coords> >::type&& coordsDrone2’
   90 |         auto [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1);
      |               ^~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:102:29: error: conflicting declaration ‘auto coordsDrone3’
  102 |         auto [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1);
      |                             ^~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:90:29: note: previous declaration as ‘std::tuple_element<1, std::pair<MultiDroneControl::Coords, MultiDroneControl::Coords> >::type&& coordsDrone3’
   90 |         auto [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1);
      |                             ^~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:65:16: warning: unused variable ‘droneCoords’ [-Wunused-variable]
   65 |         Coords droneCoords;
      |                ^~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:102:14: warning: unused structured binding declaration [-Wunused-variable]
  102 |         auto [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1);
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘std::pair<MultiDroneControl::Coords, MultiDroneControl::Coords> MultiDroneControl::calculateFollowerPositions(const MultiDroneControl::Coords&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:181:16: warning: unused variable ‘angleRad’ [-Wunused-variable]
  181 |         double angleRad = angle * M_PI / 180.0;
      |                ^~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘MultiDroneControl::Coords MultiDroneControl::get_coords(const string&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:259:13: warning: unused variable ‘i’ [-Wunused-variable]
  259 |         int i = 0;
      |             ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:257:42: warning: unused parameter ‘ns’ [-Wunused-parameter]
  257 |     Coords get_coords(const std::string &ns){
      |                       ~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
